# RGB-Gulag

./: CMakeLists.txt  CS213-SharedDoc.docx  CS213_A1_Part1_S32_20240738_20240377_20240001.cpp  CS213_A1_Part1_S33_20240738_20240377_20240001.cpp  ImageProcessingDemo.cpp  Image_Class.h  README.md  Untitled Diagram.drawio  filters.cpp  filters.h  main.cpp  mainwindow.cpp  mainwindow.h  امتحان مديول 206 الفرقة الثانية.xlsx
